--- a/samples/Android/NuGetFinder.Android/NuGetFinder.Android.csproj
+++ b/samples/Android/NuGetFinder.Android/NuGetFinder.Android.csproj
@@ -53,10 +53,10 @@
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
     <Reference Include="Simple.OData.Client.Core">
-      <HintPath>..\packages\Simple.OData.Client.3.0.0\lib\portable-net45+wp80+wpa81+win+MonoAndroid10+MonoTouch10\Simple.OData.Client.Core.dll</HintPath>
+      <HintPath>..\lib\Simple.OData.Client.Core.dll</HintPath>
     </Reference>
     <Reference Include="Simple.OData.Client.Dynamic">
-      <HintPath>..\packages\Simple.OData.Client.3.0.0\lib\portable-net45+wp80+wpa81+win+MonoAndroid10+MonoTouch10\Simple.OData.Client.Dynamic.dll</HintPath>
+      <HintPath>..\lib\Simple.OData.Client.Dynamic.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
