--- a/samples/WP8/NuGetFinder.WP8/NuGetFinder.WP8.csproj
+++ b/samples/WP8/NuGetFinder.WP8/NuGetFinder.WP8.csproj
@@ -9,8 +9,8 @@
     <ProjectTypeGuids>{C089C8C0-30E0-4E22-80C0-CE093F111A43};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NuGetFinder.WinPhone</RootNamespace>
-    <AssemblyName>NuGetFinder.WinPhone</AssemblyName>
+    <RootNamespace>NuGetFinder.WP8</RootNamespace>
+    <AssemblyName>NuGetFinder.WP8</AssemblyName>
     <TargetFrameworkIdentifier>WindowsPhone</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
@@ -21,7 +21,7 @@
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
     <XapFilename>PhoneApp1_$(Configuration)_$(Platform).xap</XapFilename>
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
-    <SilverlightAppEntry>NuGetFinder.WinPhone.App</SilverlightAppEntry>
+    <SilverlightAppEntry>NuGetFinder.WP8.App</SilverlightAppEntry>
     <ValidateXaml>true</ValidateXaml>
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
