--- a/samples/WP8/NuGetFinder.WP8/NuGetFinder.WP8.csproj
+++ b/samples/WP8/NuGetFinder.WP8/NuGetFinder.WP8.csproj
@@ -161,13 +161,11 @@
     <Reference Include="Microsoft.Phone.Controls.Toolkit">
       <HintPath>..\packages\WPtoolkit.4.2013.08.16\lib\wp8\Microsoft.Phone.Controls.Toolkit.dll</HintPath>
     </Reference>
-    <Reference Include="Simple.OData.Client.Core, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Simple.OData.Client.Core.dll</HintPath>
+    <Reference Include="Simple.OData.Client.Core">
+      <HintPath>H:\Documents\Projects\Git\Simple.OData.Client.xamstore\samples\WP8\lib\Simple.OData.Client.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Simple.OData.Client.Dynamic, Version=3.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Simple.OData.Client.Dynamic.dll</HintPath>
+    <Reference Include="Simple.OData.Client.Dynamic">
+      <HintPath>H:\Documents\Projects\Git\Simple.OData.Client.xamstore\samples\WP8\lib\Simple.OData.Client.Dynamic.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.13\lib\sl4-windowsphone71\System.Net.Http.dll</HintPath>
