--- a/samples/Android/NuGetFinder.Android/app.config
+++ b/samples/Android/NuGetFinder.Android/app.config
@@ -6,6 +6,10 @@
         <assemblyIdentity name="System.Threading.Tasks" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.22.0" newVersion="2.2.22.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
