--- a/samples/iOS/NuGetFinder.iOS/app.config
+++ b/samples/iOS/NuGetFinder.iOS/app.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="System.IO" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.6.7.0" newVersion="2.6.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.22.0" newVersion="2.2.22.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
